# anchor-client-gen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
anchor-client-gen/: Cargo.toml
anchor-client-gen/src/: lib.rs
example/: Cargo.toml
example-mango/: Cargo.toml  idl.json
example-mango/src/: lib.rs
example-with-output/: Cargo.toml  idl.json
example-with-output/src/: lib.rs  output.rs
example/src/: lib.rs
utils/: Cargo.toml
utils/src/: idl.rs  lib.rs  meta.rs
utils/src/generator/: events.rs  instructions.rs  mod.rs  state.rs
