[package]
name = "anchor_client_gen"
version = "0.0.1"
edition = "2021"
authors = ["dmc0125"]
license = "MIT"
repository = "https://github.com/Dmc0125/anchor-client-gen-rs"
description = "Tool for generating crate from anchor IDL"
keywords = ["anchor-lang", "idl"]

[lib]
name = "anchor_client_gen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
utils = { package = "utils", path = "../utils" }
