[package]
name = "anchor_client_gen"
version = "0.1.1"
edition = "2021"
authors = ["Dominik Michal"]
license = "MIT"
repository = "https://github.com/Dmc0125/anchor-client-gen-rs"
description = "Tool for generating crate from anchor IDL"
keywords = ["anchor-lang", "idl"]
readme = "../README.md"
homepage = "https://crates.io/crates/anchor-client-gen"

[lib]
name = "anchor_client_gen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
utils = { package = "anchor-client-gen-utils", path = "../utils", version = "0.1.2" }
