[package]
name = "anchor-client-gen-utils"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Michal"]
license = "MIT"
repository = "https://github.com/Dmc0125/anchor-client-gen-rs"
keywords = ["anchor-lang", "idl"]
readme = "../README.md"
homepage = "https://crates.io/crates/anchor-client-gen-utils"
description = "Utils crate for anchor-client-gen-rs"

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.66"
quote = "1.0.33"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
solana-sdk = "1.16.9"
